# fast-ssh

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  database.rs  group_tabs.rs  host_list.rs  input_handler.rs  layout.rs  main.rs  render_config.rs  render_group_tabs.rs  render_host_list.rs  render_host_table.rs  render_shortcuts.rs  searcher.rs  ssh_config_store.rs  term.rs  theme.rs
src/widgets/: block.rs  config_widget.rs  groups_widget.rs  help_widget.rs  hosts_widget.rs  mod.rs  shortcuts_widget.rs
