[package]
name = "rs-ssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
crossterm = "0.22.1"
ssh_cfg = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
