[package]
name = "fast-ssh"
version = "0.1.2"
license = "MIT"
description = "Quicky connect to your servers by navigating through your SSH config."
readme = "README.md"
homepage = "https://github.com/Julien-R44/fast-ssh"
repository = "https://github.com/Julien-R44/fast-ssh"
keywords = ["cli", "tui", "ssh", "ssh-config"]
categories = ["command-line-utilities", "config"]
authors = ["Julien-R44 <julien@ripouteau.com>"]
edition = "2021"

[dependencies]
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
crossterm = "0.22.1"
ssh_cfg2 = "0.1.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
rustbreak = { version = "2.0.0", features = ["ron_enc"] }
dirs = "4.0.0"
serde = "1.0.130"
chrono = "0.4.19"