[package]
name = "fast-ssh"
version = "0.3.1"
license = "MIT"
description = "Quicky connect to your servers by navigating through your SSH config."
readme = "README.md"
homepage = "https://github.com/Julien-R44/fast-ssh"
repository = "https://github.com/Julien-R44/fast-ssh"
keywords = ["cli", "tui", "ssh", "ssh-config"]
categories = ["command-line-utilities", "config"]
authors = ["Julien-R44 <julien@ripouteau.com>"]
edition = "2021"

[dependencies]
tui = { version = "0.19.0", default-features = false, features = ['crossterm'] }
crossterm = "0.27.0"
ssh_cfg = "0.3"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
rustbreak = { version = "2.0.0", features = ["ron_enc"] }
dirs = "5.0.1"
serde = "1.0.199"
serde_yaml = "0.8.21"
chrono = "0.4.38"
sublime_fuzzy = "0.7.0"
lazy_static = "1.4.0"
anyhow = "1.0.82"
